@@ -26,6 +26,7 @@ ChangeLog
 [+] * Added sample SQL trigger for SMSD polls.
 [-] * Display sent SMS time if it is available (bug#1053).
 [-] * Added bunch of new testcases.
+[-] * Distinguish silent/tone alarms in own backup format.
     
 20091203 - 1.26.92
 
